# monolith

./: .dockerignore  .easignore  .gitignore  .npmrc  .railwayignore  AGENTS.md  Anchor.toml  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  MULTIPLAYER_QUICK_START.md  POLISH_PLAN.md  README.md  SPRINT_PLAN.md  TESTING.md  app.json  dev.sh  emulator.sh  generate-claim-sound.js  mvp_roadmap.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  ralph-onboarding-revamp.md  ralph-push-notifications.md  ralph-sounds.md  react-native-three.skill  test.sh
.agent/: CAMERA_IMPLEMENTATION_PLAN.md  CAMERA_TESTING_FRAMEWORK.md  camera_improvements_backup.md
.antigravity/: commit.md  context.md  improve.md  interview.md  learn.md  wrapup.md
.maestro/: 01-launch.yaml  02-tower-interaction.yaml  03-navigation.yaml  04-leaderboard.yaml  05-connection-status.yaml  06-claim-celebration.yaml  config.yaml
archive_docs/: MVP_ROADMAP_game_design.md
docs/: ANCHOR_PROGRAM.md  APK_INSTALL.md  ARCHITECTURE.md  BLOCK_CUSTOMIZATION_PLAN.md  BOT_SIMULATION.md  CUSTOMIZATION_OVERHAUL_PLAN.md  DEVNET_TESTING.md  INVESTOR_STRATEGY.md  LESSONS.md  MULTIPLAYER_DEPLOYMENT.md  PITCH.md  POST_HACK_SPRINT.md  RUDE_AWAKENING_PLAN.md  RUDE_AWAKENING_V2.md  RUDE_AWAKENING_V2_PLAN.md  SETUP.md  SMART_CONTRACT_FIX_PLAN.md  SOLANA_MOBILE.md  SPARK_OVERHAUL_PLAN.md  TESTER_GUIDE.md  TESTING.md  WHY_PLAYERS_PLAY.md  WSL_SETUP.md
pitch/: PITCH_REWORK_PLAN.md  avatar-data-uri.txt  avatar-small-data-uri.txt  (+10 more)
programs/monolith/: Anchor.toml  Cargo.toml
programs/monolith/src/: error.rs  lib.rs  state.rs
(+300 files in other folders)
